--- a/src/components/HeadBar/index.less
+++ b/src/components/HeadBar/index.less
@@ -2,19 +2,27 @@
 .bar-wrapper {
   padding: 10px;
   position: relative;
+  font-family: emoji;
 }
 
 .menu {
   display: flex;
   .menu-item {
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: 20px;
-    padding: 10px 20px;
-    height: 44px;
+    height: 40px;
+    width: 100px;
+    font-size: 18px;
     box-sizing: border-box;
     box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1);
     &:hover {
       box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+    }
+    &:active {
+      background-color: rgba(0, 0, 0, 0.04);
     }
   }
 }
